src/objects/IdeasSiteSetup__c.object
<CustomObject>
    <description>Ideas Site Setup</description>
    <fields>
        <fullName>AboutBannerImageUrl__c</fullName>
        <label>About - Banner Image URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>AboutBody__c</fullName>
        <label>About - Body</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>AboutHeading__c</fullName>
        <label>About - Heading</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CacheMaxAge__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>The amount of time (in seconds) the content distribution network (CDN) server caches the pages of your Ideas site. A value of zero (0) disables caching. CDN caching is automatically enabled on  sites. We recommend setting this to 300 seconds (5 minutes).</inlineHelpText>
        <label>Cache Max Age</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Categories__c</fullName>
        <inlineHelpText>The picklist values for the Categories field. You must enter the picklist values exactly as they have been specified for the community when the Ideas site was set up (or a validation error appears). Enter one picklist value per line.</inlineHelpText>
        <label>Categories</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CommunityId__c</fullName>
        <caseSensitive>true</caseSensitive>
        <inlineHelpText>The ID of the community that you want to use the base theme. You can only apply the base theme to one community in your organization.</inlineHelpText>
        <label>Community ID</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>CustomCssUrl__c</fullName>
        <inlineHelpText>The URL of your custom Cascading Style Sheet (CSS) if one exists. Your custom CSS overrides the styles specified in the CSS that comes with the base theme.</inlineHelpText>
        <label>Custom CSS URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>ExpertsGroupId__c</fullName>
        <caseSensitive>true</caseSensitive>
        <inlineHelpText>The ID of the experts group that is responsible for monitoring and responding to ideas and comments in the community.</inlineHelpText>
        <label>Experts Group ID</label>
        <length>15</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>FooterText__c</fullName>
        <label>Footer - Text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ForgotPasswordBody__c</fullName>
        <label>Forgot Password - Body</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ForgotPasswordHeading__c</fullName>
        <label>Forgot Password - Heading</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HomeBannerImageUrl__c</fullName>
        <label>Home - Banner Image URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>HomeBody1__c</fullName>
        <label>Home - Body 1</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>HomeBody2__c</fullName>
        <label>Home - Body 2</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>HomeBody3__c</fullName>
        <label>Home - Body 3</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>HomeHeading1__c</fullName>
        <label>Home - Heading 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HomeHeading2__c</fullName>
        <label>Home - Heading 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HomeHeading3__c</fullName>
        <label>Home - Heading 3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HomeRecentIdeasHeading__c</fullName>
        <label>Home - Recent Ideas Heading</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LoginBody__c</fullName>
        <label>Login - Body</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LoginHeading__c</fullName>
        <label>Login - Heading</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OverrideIdeaAbout__c</fullName>
        <label>Override - ideaAbout</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OverrideIdeaAccountDetails__c</fullName>
        <label>Override - ideaAccountDetails</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OverrideIdeaForgotPasswordConfirm__c</fullName>
        <label>Override - ideaForgotPasswordConfirm</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OverrideIdeaForgotPassword__c</fullName>
        <label>Override - ideaForgotPassword</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OverrideIdeaHome__c</fullName>
        <label>Override - ideaHome</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OverrideIdeaLayout__c</fullName>
        <label>Override - ideaLayout</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OverrideIdeaList__c</fullName>
        <label>Override - ideaList</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OverrideIdeaPost__c</fullName>
        <label>Override - ideaPost</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OverrideIdeaProfileActivity__c</fullName>
        <label>Override - ideaProfileActivity</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OverrideIdeaProfileList__c</fullName>
        <label>Override - ideaProfileList</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OverrideIdeaSearchResults__c</fullName>
        <label>Override - ideaSearchResults</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OverrideIdeaSiteLogin__c</fullName>
        <label>Override - ideaSiteLogin</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OverrideIdeaSiteRegister__c</fullName>
        <label>Override - ideaSiteRegister</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OverrideIdeaView__c</fullName>
        <label>Override - ideaView</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PortalAccount__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The account that is associated with new users then they self-register on your Ideas site. When a new user self-registers, the user appears in the Contacts related list for this account.</inlineHelpText>
        <label>Portal Self-Registration Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Ideas Site Setups</relationshipLabel>
        <relationshipName>Ideas_Site_Setups</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RegisterBody__c</fullName>
        <label>Register - Body</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>RegisterHeading__c</fullName>
        <label>Register - Heading</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Statuses__c</fullName>
        <inlineHelpText>The picklist values for the Status field. You must enter the picklist values exactly as they have been specified for the community when the Ideas site was set up (or a validation error appears). Enter one picklist value per line.</inlineHelpText>
        <label>Statuses</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <label>Ideas Site Setup</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Ideas Site Setup Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Ideas Site Setup</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>